tests/errors/new_outside_class.dang
# new() is only valid inside class bodies
new(x: Int!) {
	print(value: x)
}
